# snake-pygame

./: game.py  pyproject.toml
objects/: base_object.py  food.py  snake.py
scenes/: base_scene.py  game_scene.py  main_menu_scene.py
